--- a/.github/workflows/morning.yml
+++ b/.github/workflows/morning.yml
@@ -1,7 +1,7 @@
 name: Slack Morning Mission
 on:
   schedule:
-    - cron: '57 15 * * *'   # 매일 22:00 UTC = 한국 07:00
+    - cron: '*/5 * * * *'   # 매일 22:00 UTC = 한국 07:00
   workflow_dispatch:        # 필요 시 수동 실행 버튼
 
 jobs:
